--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,7 +13,9 @@ add_subdirectory(prototype1)
 add_subdirectory(common)
 add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_fortran_atlas)
+if( HAVE_PYIFACE AND "${prec}" STREQUAL "dp" )
 add_subdirectory(cloudsc_pyiface)
+endif()
 add_subdirectory(cloudsc_python)
 add_subdirectory(cloudsc_c)
 if( HAVE_CUDA )
