--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -13,11 +13,14 @@ add_subdirectory(prototype1)
 add_subdirectory(common)
 add_subdirectory(cloudsc_fortran)
 add_subdirectory(cloudsc_fortran_atlas)
-if( HAVE_PYIFACE AND "${prec}" STREQUAL "dp" )
+if( "${prec}" STREQUAL "dp" )
+  if( HAVE_PYIFACE )
 add_subdirectory(cloudsc_pyiface)
+  endif()
+  if( HAVE_PYTHON_F2PY )
+    add_subdirectory(cloudsc_python)
+  endif()
 endif()
-add_subdirectory(cloudsc_python)
-add_subdirectory(cloudsc_c)
 if( HAVE_CUDA )
 add_subdirectory(cloudsc_cuda)
 endif()
