--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,24 +9,51 @@
 set( COMMON_MODULE "${CMAKE_CURRENT_SOURCE_DIR}/common/module" )
 set( COMMON_INCLUDE "${CMAKE_CURRENT_SOURCE_DIR}/common/include" )
 
-add_subdirectory(prototype1)
-add_subdirectory(common)
-add_subdirectory(cloudsc_fortran)
-add_subdirectory(cloudsc_fortran_atlas)
-if( "${prec}" STREQUAL "dp" )
-  if( HAVE_PYIFACE )
-add_subdirectory(cloudsc_pyiface)
+# Available precisions
+set( CLOUDSC_PRECISIONS )
+if( HAVE_DOUBLE_PRECISION )
+  list( APPEND CLOUDSC_PRECISIONS dp )
+endif()
+if( HAVE_SINGLE_PRECISION )
+  list( APPEND CLOUDSC_PRECISIONS sp )
+endif()
+
+foreach( prec IN LISTS CLOUDSC_PRECISIONS )
+
+  if( "${prec}" STREQUAL "sp" )
+    list( APPEND CLOUDSC_DEFINITIONS SINGLE )
   endif()
-  if( HAVE_PYTHON_F2PY )
-    add_subdirectory(cloudsc_python)
+
+  # Make sure to build the common libs first
+  add_subdirectory( common common.${prec} )
+
+  # A few variants only support double precision
+  if( "${prec}" STREQUAL "dp" )
+    add_subdirectory( prototype1 cloudsc_prototype1.${prec} )
+    add_subdirectory( cloudsc_c cloudsc_c.${prec} )
+    if( HAVE_PYIFACE )
+      add_subdirectory( cloudsc_pyiface cloudsc_pyiface.${prec} )
+    endif()
+    if( HAVE_PYTHON_F2PY )
+      add_subdirectory( cloudsc_python cloudsc_python.${prec} )
+    endif()
   endif()
-endif()
-if( HAVE_CUDA )
-add_subdirectory(cloudsc_cuda)
-endif()
-add_subdirectory(cloudsc_hip)
-add_subdirectory(cloudsc_sycl)
-add_subdirectory(cloudsc_gpu)
-if( HAVE_LOKI )
-add_subdirectory(cloudsc_loki)
-endif()
+
+  # Add all remaining subdirectories with precision-specific binary directories
+  if( HAVE_CUDA )
+    add_subdirectory( cloudsc_cuda cloudsc_cuda.${prec} )
+  endif()
+  add_subdirectory( cloudsc_fortran cloudsc_fortran.${prec} )
+  add_subdirectory( cloudsc_fortran_atlas cloudsc_fortran_atlas.${prec} )
+  add_subdirectory( cloudsc_gpu cloudsc_gpu.${prec} )
+  if( HAVE_HIP )
+    add_subdirectory( cloudsc_hip cloudsc_hip.${prec} )
+  endif()
+  if( HAVE_LOKI )
+    add_subdirectory( cloudsc_loki cloudsc_loki.${prec} )
+  endif()
+  if( HAVE_SYCL )
+    add_subdirectory( cloudsc_sycl cloudsc_sycl.${prec} )
+  endif()
+
+endforeach()
