--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,8 @@
 
 # define minimum version of cmake required
 # 3.21 is required for HIP support
-cmake_minimum_required( VERSION 3.21 FATAL_ERROR )
+# 3.23.5 is required for SYCL support
+cmake_minimum_required( VERSION 3.23.5 FATAL_ERROR )
 
 find_package( ecbuild REQUIRED )
 
